<resources>
    <!--<string name="app_name">Puzzle</string>

    //<string name="textoinicio">Bienvenido al juego</string>

     TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="app_name">PuzzleDroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textincio">Bienvenido al Juego</string>
    <string name="salir">Salir</string>
    <string name="text_Usuario">Usuario:</string>
    <string name="text_Password">Contraseña:</string>
    <string name="btn_Logueo">Logueo</string>
    <string name="btn_Crear">Crear</string>
    <string name="sign_in_button">Entrar Google</string>
    <string name="button_inicioPartida">Inicio Partida</string>
    <string name="button_tomarFoto">Tomar Foto</string>
    <string name="button_ranking">Top 10</string>
    <string name="button_multiplayer">Multiplayer</string>
    <string name="button_seleccionMusica">Selecciona Musica</string>
    <string name="button_seleccionarimagenes">Seleccionar Imagenes Disp</string>
    <string name="button_fotocamara">"Tomar Foto "</string>
    <string name="button_empezarpartidasinfragmentar">Empezar!</string>
    <string name="textSuccess">Correcto!</string>
    <string name="button_Registro">Registrar</string>
    <string name="campoTimee">Tiempo</string>
    <string name="campoNamee">Nombre</string>
    <string name="textoRegistroUsuarios">Registrar Putunacion</string>
    <string name="TiempoRanking">Tiempo:</string>
    <string name="NameRanking">Nombre:</string>
    <string name="Help">Ayuda</string>
    <string name="exit">Salir</string>
    <string name="ImagenesSeg">Imagenes Ya Segmentadas</string>
    <string name="ImagenessinSeg">Imagenes Sin Segmentar</string>
    <string name="editTextUsuario">Nombre</string>
</resources>
